Closed
Bug 1139506
Opened 10 years ago
Closed 10 years ago
crash in mergeStacksIntoProfile or @ JS::IsProfilingEnabledForRuntime(JSRuntime*), with Gecko Profiler add-on
Categories
(Core :: Gecko Profiler, defect)
Core
Gecko Profiler
Tracking
()
RESOLVED
FIXED
mozilla39
People
(Reporter: vladan, Assigned: djvj)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
1.74 KB,
patch
|
shu
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-bba378a9-2f68-4d24-ae33-c516b2150304.
=============================================================
Reproducible startup crash on recent Nightlies with Gecko Profiler extension enabled.
Assignee | ||
Comment 1•10 years ago
|
||
Sometimes JS runtime is NULL when profiling.
Attachment #8572751 -
Flags: review?(shu)
Updated•10 years ago
|
Attachment #8572751 -
Flags: review?(shu) → review+
Comment 3•10 years ago
|
||
Adding crash-signature from duplicate bug 1139459
Crash Signature: [@ mergeStacksIntoProfile] → [@ mergeStacksIntoProfile]
[@ JS::IsProfilingEnabledForRuntime(JSRuntime*)]
Summary: crash in mergeStacksIntoProfile → crash in mergeStacksIntoProfile or @ JS::IsProfilingEnabledForRuntime(JSRuntime*), with Gecko Profiler add-on
Updated•10 years ago
|
Blocks: 1130367
Keywords: regression
OS: Windows NT → All
Hardware: x86 → All
Version: unspecified → Trunk
Assignee | ||
Comment 4•10 years ago
|
||
Try looking mostly green: https://treeherder.mozilla.org/#/jobs?repo=try&revision=cd8b6bce886c
Small patch, easy fix, so pushing: https://hg.mozilla.org/integration/mozilla-inbound/rev/09ef352a8536
Comment 5•10 years ago
|
||
I hit this on startup just now 3 times in a row, FWIW:
https://crash-stats.mozilla.com/report/index/3f6cc6b4-5ebb-474b-9030-1d5e92150305
Comment 6•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Comment 7•10 years ago
|
||
I just experienced this crash on Developer Edition (38.0a2):
https://crash-stats.mozilla.com/report/index/2811bd5a-c79a-47ae-bf18-c32392150317
Is it possible that this fix needs to get uplifted?
Flags: needinfo?(kvijayan)
Assignee | ||
Comment 8•10 years ago
|
||
Yes, this needs uplift to be pushed up into aurora. It seemed, since the regressing patch landed on March 02, that this wouldn't be the case, but the problem definitely exists in aurora browsing the code.
Flags: needinfo?(kvijayan)
Assignee | ||
Comment 9•10 years ago
|
||
Comment on attachment 8572751 [details] [diff] [review]
fix-bug-1139506.patch
Approval Request Comment
[Feature/regressing bug #]:
Bug 1130367
[User impact if declined]:
Crashes when starting with gecko profiler plugin turned on and enabled.
[Describe test coverage new/current, TreeHerder]:
In central for few weeks now.
[Risks and why]:
Very low risk. Just adds a null check and an assert.
[String/UUID change made/needed]:
N/A
Attachment #8572751 -
Flags: approval-mozilla-aurora?
Updated•10 years ago
|
status-firefox38:
--- → affected
Comment 10•10 years ago
|
||
Comment on attachment 8572751 [details] [diff] [review]
fix-bug-1139506.patch
Fix a crash, taking it.
Attachment #8572751 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•