Bug 1139506 - Check for null JSRuntime in tableticker stack trace merge. r=shu, a=sledru