js/src/vm/Runtime.cpp
@@ -840,5 +840,6 @@ js::AssertCurrentThreadCanLock(RuntimeLock which)
 JS_FRIEND_API(bool)
 JS::IsProfilingEnabledForRuntime(JSRuntime *runtime)
 {
+    MOZ_ASSERT(runtime);
     return runtime->spsProfiler.enabled();
 }
